Disable blur for mobile, z-index bugfix

--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ header
 {
 	position: sticky !important;
 	display: table !important;
-	z-index: 1001 !important;
+	z-index: 1000 !important;
 }
 #header_flex
 {
@@ -174,6 +174,10 @@ header
 {
 	color: #F57300;
 	text-decoration: underline;
+}
+#main_container .dimmer
+{
+	z-index: 999;
 }
 #main_header
 {
